# AdventOfCodeSolutions

./: aoc.cabal  aoc2025.cabal  stack.yaml
.github/workflows/: haskell.yml
app/: Main.hs
src/AdventOfCode/: Days.hs  Days2017.hs  Days2025.hs
