cabal-version: 3.0
name:          aoc
version:       0.1.0.0
build-type:    Simple

executable aoc
  main-is:          Main.hs
  hs-source-dirs:   app src
  other-modules:
    AdventOfCode.Days2025
    AdventOfCode.Days2017
  default-language: Haskell2010
  ghc-options: -Wall -O2
  build-depends:
    array,
    base,
    containers,
    vector,
    mtl,
    text,
