cabal-version: 3.0
name:          aoc2025
version:       0.1.0.0
build-type:    Simple

executable aoc2025
  main-is:          Main.hs
  hs-source-dirs:   app src
  other-modules:
    AdventOfCode.Days
  default-language: GHC2021
  ghc-options:      -Wall -O2
  build-depends:
    array >= 0.5.6 && < 0.6,
    base >= 4.18.2 && < 4.19,
    containers >= 0.6
