cabal-version: 3.0
name:          aoc2025
version:       0.1.0.0
build-type:    Simple

executable aoc2025
  main-is:          Main.hs
  hs-source-dirs:   app src
  other-modules:
    AdventOfCode.Days
  default-language: Haskell2010
  ghc-options:      -Wall -O2
  build-depends:
    base >= 4 && < 5,
    array >= 0.5.8 && < 0.6.0,
    containers >= 0.6 && < 0.9.0
